--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-input/mask": "^2.0.4",
     "@reduxjs/toolkit": "^2.8.2",
     "formik": "^2.4.6",
     "lucide-react": "^0.534.0",
